schema/testdata/validation_message_in_operation/schema.keel
message Foo {
  bar Text
}

model Person {
  operations {
    create createPerson(Foo)
  }
}